--- a/app/src/main/res/layout/activity_launcher.xml
+++ b/app/src/main/res/layout/activity_launcher.xml
@@ -23,4 +23,11 @@
         android:layout_height="wrap_content"
         android:text="Threaded Calc Example" />
 
+    <Button
+        android:id="@+id/launch_calc_threaded_right"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Threaded Calc Right Example" />
+
+
 </LinearLayout>
